# discord_console_status

./: .gitignore  Cargo.toml  build.rs
src/: main.rs  sigint.rs
src/config/: file.in.rs  file.rs  mod.rs
src/psn/: mod.rs  responses.in.rs  responses.rs
src/xbl/: mod.rs  responses.rs
