[package]
name = "discord_console_status"
version = "0.1.0"
authors = ["Austin Wagner <austinwagner@gmail.com>"]

[dependencies]
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
serde-hjson = "0.8"
hyper = "0.9"
quick-error = "1.1"
regex = "0.1"
lazy_static = "0.2"
select = "0.3"
winapi = "0.2"
kernel32-sys = "0.2"
log = "0.3"
log4rs = "0.6"
clap = "2.18"
rpassword = "0.3"
nix = "0.7"

[dependencies.discord]
version = "0.8"
default-features = false